overlays/prod/ingress/ingress-alb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb
  namespace: default #ingress resource와 실행될 service는 같은 namespace에 위치해야함
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-09f2cb9f48dc32462, subnet-0b0f584287b22e2c8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:637423620662:certificate/17bda523-9c5b-4d76-8bd9-56c2b6771d77
    alb.ingress.kubernetes.io/group.name: ts-alb-group
    alb.ingress.kubernetes.io/load-balancer-name: ts-alb
spec:
  ingressClassName: alb
  rules:
    - host: ktb-project-domain.shop
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 5555
          # - path: /argocd
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: argocd
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
