overlays/prod/ingress/ingress-argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ts-alb-group
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/subnets: subnet-09f2cb9f48dc32462, subnet-0b0f584287b22e2c8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:637423620662:certificate/17bda523-9c5b-4d76-8bd9-56c2b6771d77
spec:
  ingressClassName: alb
  rules:
    - host: ktb-project-domain.shop
      http:
        paths:
          - path: /argo-cd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
